# evars

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  bandit.yaml  dev-requirements.txt  pyproject.toml  setup.cfg
src/evars/: __init__.py  environment.py  environment_tests.py  errors.py  localtypes.py  parser.py  parser_tests.py  test_environment.py  test_parser.py
