[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel"
]

[project]
authors = [
  {name = "E. Pineapple", email = "e.pineapple@pineapple.st"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []
description = "load environment variables from files"
license = {file = "LICENSE"}
name = "evars"
readme = "README.md"
requires-python = "~=3.6"
version = "0.1.3"

[project.optional-dependencies]
lint = [
  "bandit",
  "mypy",
  "pylint"
]
test = [
  "pytest",
  "pytest-cov"
]

[project.urls]
changelog = "https://raw.githubusercontent.com/pineapple-electric/evars/master/CHANGELOG.md"
repository = "https://github.com/pineapple-electric/evars/"

[tool.black]
line-length = 79

[tool.pylint]

[tool.pytest.ini_options]
testpaths = [
  "src"
]
