[metadata]
name = evars
version = 0.0.1
url = https://github.com/pineapple-electric/evars/
author = E. Pineapple
author_email = e.pineapple@pineapple.st
license_file = LICENSE
description = load environment variables from files
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = evars
